--- a/public/components/image-gallery_v3.html
+++ b/public/components/image-gallery_v3.html
@@ -14,22 +14,11 @@
                         <a href="{{image.url}}" title="{{image.label}}" data-gallery>
                             <div id="{{component._id}}-{{$index}}" class="ssb-img-settings img-responsive img-gallery-{{$index}} image-gallery center" 
                              data-index="{{$index}}" alt="{{image.label}}" ng-attr-style="background-image: url('{{image.url}}')">
-                                    <div class="image-overlay" ng-if="isEditing && vm.elementData.imageOverlay.active"
-                                    ng-style="{ 'background-color':vm.elementData.imageOverlay.backgroundcolor, 
-                                                'font-size':vm.elementData.imageOverlay.font.fontSize+'px',
-                                                'font-family':vm.elementData.imageOverlay.font.fontFamily,
-                                                'color':vm.elementData.imageOverlay.color }" >
-                                            <div class="header">{{vm.elementData.imageOverlay.heading}}</div>
-                                            <div class="desc">{{vm.elementData.imageOverlay.description}}</div>   
-                                    </div>
-                                    <div ng-if="!isEditing && image.imageOverlay.active" class="image-overlay {{image.imageOverlay.onMouseOver?'mouse-on':'mouse-off'}}"
-                                    ng-style="{ 'background-color':image.imageOverlay.backgroundcolor, 
-                                                'font-size':image.imageOverlay.font.fontSize+'px',
-                                                'font-family':image.imageOverlay.font.fontFamily,
-                                                'color':image.imageOverlay.color}" >
-                                            <div class="header">{{image.imageOverlay.heading}}</div>
-                                            <div class="desc">{{image.imageOverlay.description}}</div>
-                                    </div>
+                                <div  ng-if="(isEditing && vm.elementData.imageOverlay.active) || (!isEditing && image.imageOverlay.active)"  ng-init="imageOverlay = isEditing ? vm.elementData.imageOverlay : image.imageOverlay "
+                                class="image-overlay {{isEditing?'':(imageOverlay.onMouseOver?'mouse-on':'mouse-off')}}" ng-style="{ 'background-color':imageOverlay.backgroundcolor,  'font-size':imageOverlay.font.fontSize+'px', 'font-family':imageOverlay.font.fontFamily, 'color':imageOverlay.color }" >
+                                        <div ng-show="imageOverlay.heading" class="header {{imageOverlay.description?'':'full_height'}}">{{imageOverlay.heading}}</div>
+                                        <div ng-show="imageOverlay.description" class="desc {{imageOverlay.heading?'':'full_height'}}">{{imageOverlay.description}}</div>       
+                                </div>
                             </div>
                         </a>
                     </div>
