#10352 less file cleaned

--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -56,6 +56,41 @@
                 margin:20px;
             }
         }
+        div.image-overlay{
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            max-width: 100%;
+            &.mouse-off{
+                display: block;
+            }
+            &.mouse-on {
+                display: none
+            }
+            div.header, div.desc ,div.full_height{
+                display: flex; 
+                text-decoration: none; 
+                justify-content: center;
+            }
+            div.header{ 
+                align-items: flex-end;
+                font-weight: bold;  
+                height: 50%;
+            }
+            div.desc{ 
+                align-items: flex-start;  
+                height: 50%;
+            }
+            div.full_height{ 
+                align-items: center; 
+            }
+        }
+        div.image-gallery:hover div.image-overlay.mouse-on{
+            display: block;
+        }
+        div.image-gallery:hover div.image-overlay.mouse-off{
+            display: none;
+        }
     }
 
 
@@ -81,45 +116,11 @@
                 min-height: 250px!important;
             }
         }
-        div.image-overlay{
-            overflow: hidden;
-            max-width: 100%;
-            &.mouse-off{
-                display: block;
-            }
-            &.mouse-on {
-                display: none
-            }
-            div.header{
-                display: flex; 
-                align-items: flex-end;
-                justify-content: center;
-                font-weight: bold;
-                height: 50%;
-                text-decoration: none;
+        div.image-overlay{ 
+            div.header, div.desc{ 
                 min-height: 125px;
-            }
-            div.desc{
-                display: flex; 
-                align-items: flex-start;
-                justify-content: center;
-                height: 50%;
-                text-decoration: none;
-                min-height: 125px;
-            }
-            div.full_height{
-                display: flex; 
-                align-items: center;
-                justify-content: center; 
-                text-decoration: none;
-            }
-        }
-        div.image-gallery:hover div.image-overlay.mouse-on{
-            display: block;
-        }
-        div.image-gallery:hover div.image-overlay.mouse-off{
-            display: none;
-        }
+            }  
+        } 
     }
 
     /*
@@ -160,44 +161,10 @@
                 min-height: 250px!important;
             }
             div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
+                div.header, div.desc{ 
                     min-height: 125px!important;
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                    min-height: 125px!important;
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
-            }
-            div.image-gallery:hover div.image-overlay.mouse-on{
-                display: block;
-            }
-            div.image-gallery:hover div.image-overlay.mouse-off{
-                display: none;
-            }
+                } 
+            } 
         }
     }
 
@@ -221,43 +188,11 @@
                 height: 350px;
                 float: none !important;
             }
-            div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
-            }
-            div.image-gallery:hover div.image-overlay.mouse-on{
-                display: block;
-            }
-            div.image-gallery:hover div.image-overlay.mouse-off{
-                display: none;
-            }
+            div.image-overlay{ 
+                div.header, div.desc{  
+                    height: 50%; 
+                } 
+            } 
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
@@ -284,45 +219,12 @@
             div.image-gallery,div.image-overlay,div.image-overlay div.full_height{
                 min-height: 280px!important;
             }
-            div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
+            div.image-overlay{ 
+                div.header, div.desc{ 
                     min-height: 140px
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                    min-height: 140px
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
+                } 
             }
-            div.image-gallery:hover div.image-overlay.mouse-on{
-                display: block;
-            }
-            div.image-gallery:hover div.image-overlay.mouse-off{
-                display: none;
-            }
+             
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
@@ -372,38 +274,10 @@
             div.image-gallery:hover div.image-overlay.mouse-off{
                 display: none;
             }
-            div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
+            div.image-overlay{ 
+                div.header, div.desc{ 
                     min-height: 125px
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                    min-height: 125px
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
+                } 
             }
         }
     }
@@ -434,45 +308,11 @@
             .image-gallery,.image-overlay,div.image-overlay div.full_height{
                 min-height: 250px!important;
             }
-            div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
+            div.image-overlay{ 
+                div.header,div.desc{  
                     min-height: 125px
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                    min-height: 125px
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
-            }
-            div.image-gallery:hover div.image-overlay.mouse-on{
-                display: block;
-            }
-            div.image-gallery:hover div.image-overlay.mouse-off{
-                display: none;
-            }
+                } 
+            } 
         }
     }
 
@@ -496,43 +336,7 @@
                 height: 350px;
                 float: none !important;
             }
-            div.image-overlay{
-                overflow: hidden;
-                max-width: 100%;
-                &.mouse-off{
-                    display: block;
-                }
-                &.mouse-on {
-                    display: none
-                }
-                div.header{
-                    display: flex; 
-                    align-items: flex-end;
-                    justify-content: center;
-                    font-weight: bold;
-                    height: 50%;
-                    text-decoration: none;
-                }
-                div.desc{
-                    display: flex; 
-                    align-items: flex-start;
-                    justify-content: center;
-                    height: 50%;
-                    text-decoration: none;
-                }
-                div.full_height{
-                    display: flex; 
-                    align-items: center;
-                    justify-content: center; 
-                    text-decoration: none;
-                }
-            }
-            div.image-gallery:hover div.image-overlay.mouse-on{
-                display: block;
-            }
-            div.image-gallery:hover div.image-overlay.mouse-off{
-                display: none;
-            }
+             
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
@@ -577,44 +381,12 @@
                     min-height: 150px!important;
                 }
                 div.image-overlay{
-                    overflow: hidden;
-                    max-width: 100%;
-                    &.mouse-off{
-                        display: block;
-                    }
-                    &.mouse-on {
-                        display: none
-                    }
-                    div.header{
-                        display: flex; 
-                        align-items: flex-end;
-                        justify-content: center;
-                        font-weight: bold;
-                        height: 50%;
-                        text-decoration: none;
+                    
+                    div.header,div.desc{ 
                         min-height: 75px;
-                    }
-                    div.desc{
-                        display: flex; 
-                        align-items: flex-start;
-                        justify-content: center;
-                        height: 50%;
-                        text-decoration: none;
-                        min-height: 75px;
-                    }
-                    div.full_height{
-                        display: flex; 
-                        align-items: center;
-                        justify-content: center; 
-                        text-decoration: none;
-                    }
+                    } 
                 }
-                div.image-gallery:hover div.image-overlay.mouse-on{
-                    display: block;
-                }
-                div.image-gallery:hover div.image-overlay.mouse-off{
-                    display: none;
-                }
+                 
                 .img-container .img-row:nth-child(8n), .img-container .img-row:first-child{
                     .image-wrap{
                         width:50%;
@@ -626,34 +398,11 @@
                                 min-height: 326px!important;
                             }
                         }
-                        div.image-overlay{
-                            overflow: hidden;
-                            max-width: 100%;
-                            &.mouse-off{
-                                display: block;
-                            }
-                            &.mouse-on {
-                                display: none
-                            }
-                            div.header{ 
+                        div.image-overlay{ 
+                            div.header, div.desc{ 
                                 min-height: 165px;
-                            }
-                            div.desc{ 
-                                min-height: 165px;
-                            }
-                            div.full_height{
-                                display: flex; 
-                                align-items: center;
-                                justify-content: center; 
-                                text-decoration: none;
-                            }
-                        }
-                        div.image-gallery:hover div.image-overlay.mouse-on{
-                            display: block;
-                        }
-                        div.image-gallery:hover div.image-overlay.mouse-off{
-                            display: none;
-                        }
+                            } 
+                        } 
                     }
                 }
             })
