Change string for -send note to contact- in admin order/contact detail

--- a/public/admin/assets/views/order-detail.html
+++ b/public/admin/assets/views/order-detail.html
@@ -559,7 +559,7 @@
                             <div class="checkbox clip-check check-success margin-top-5" ng-if="order.customer.details[0].emails[0].email">
                                 <input type="checkbox" id="note-editable" ng-model="notesEmail.enable" >
                                 <label for="note-editable">
-                                    Send Notes to Contact by Email
+                                    Send New Note to Contact
                                 </label>
                             </div>
                             <button type="button" ng-disabled="!(newNote)" class="btn btn-info btn-block btn-o btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="addNote()">
