--- a/public/admin/assets/views/contact-detail.html
+++ b/public/admin/assets/views/contact-detail.html
@@ -315,7 +315,7 @@
                                                 <div class="checkbox clip-check check-success margin-top-10" ng-if="contact.details[0].emails[0].email">
                                                     <input type="checkbox" id="note-editable" ng-model="notesEmail.enable" >
                                                     <label for="note-editable">
-                                                        Send Notes to Contact by Email
+                                                        Send New Note to Contact
                                                     </label>
                                                 </div>
                                                 <button type="button" ng-disabled="!(newNote.text)" class="btn btn-info btn-block btn-o btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="addNote(newNote.text)">
