--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-card/ssb-blog-post-card.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-card/ssb-blog-post-card.component.html
@@ -56,7 +56,7 @@
                 <a ng-if="!vm.compactView" class="btn btn-link ssb-theme-btn" href="/blog/{{vm.post.post_url}}" target="_self">READ MORE  <i class="fa fa-long-arrow-right"></i></a>
                 <div data-ng-if="vm.post.post_tags && !vm.compactView && vm.filteredPostView && vm.post.post_tags.length">
                     <h5 class="ssb-tag-heading">TAGS</h5>
-                    <ul class="ssb-post_tags" >
+                    <ul class="ssb-post_tags padding-left-0" >
                         <li ng-repeat="tag in vm.post.post_tags track by $index">
                             <a href="/tag/{{tag.text ? vm.encodeUrlText(tag.text): vm.encodeUrlText(tag)}}" class="btn ssb-theme-btn" target="_self" itemprop="url" rel="tag">{{tag.text ? tag.text: tag}}</a>
                         </li>
