Platform - Customers - Add pagination to users table #10349

--- a/public/admin/assets/views/customer-detail.html
+++ b/public/admin/assets/views/customer-detail.html
@@ -229,50 +229,58 @@
                                     <div class="panel-body panel-white space20 ">
                                         <div class="panel-heading border-light">
                                             <h4 class="panel-title">Account <span class="text-bold">Users</span></h4>
-                                            <table class="table table-primary margin-bottom-0">
-                                                <thead>
-                                                <tr class="ng-scope">
-                                                    <th>ID</th>
-                                                    <th>Name</th>
-                                                    <th>Username</th>
-                                                    <th>Actions</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr ng-if="!customer.users || customer.users.length <= 0">
-                                                    <td colspan="4">
-                                                        <h4 class="text-center margin-top-30 margin-bottom-30">No Users</h4>
-                                                    </td>
-                                                </tr>
-                                                <tr ng-repeat="user in customer.users">
-                                                    <td>
-                                                        {{user._id}}
-                                                    </td>
-                                                    <td>{{user.first}} {{user.last}}</td>
-                                                    <td>{{user.username}}</td>
-                                                    <td class="table-action">
-                                                        <input ng-disabled="saveUser" type="checkbox" id="exclude_{{$index}}" ng-model="user.excludeFromCustomerView" ng-change="excludeUserFromCustomerView(user._id, user.excludeFromCustomerView, user)" class="margin-right-5 pull-left" style="margin-top: 2px;">
-                                                        <a ng-click="openEditUserModal(user._id)"><i class="fa fa-pencil"></i></a>
-                                                        <a ng-click="removeUserFromAccount(user._id)" class="delete-row"><i class="fa fa-trash-o"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td colspan="4">
-                                                        <div class="form-group margin-bottom-0 pull-right">
-                                                            <button type="button" class="btn btn-warning btn-wide btn-scroll btn-scroll-top ti ti-plus" ng-click="openSimpleModal('new-user-modal')">
-                                                                <span>Add New User</span>
-                                                            </button>
-                                                        </div>
-                                                        <div class="form-group margin-bottom-0 margin-right-5 pull-right hidden">
-                                                            <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="openModal('import-contact-modal', 'importContactModalCtrl','md')">
-                                                                <span>Add Existing User</span>
-                                                            </button>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-
+                                            <div st-table="displayedUsers" st-safe-src="customer.users" st-filtered-collection>
+                                                <table class="table table-primary margin-bottom-0">
+                                                    <thead>
+                                                    <tr class="ng-scope">
+                                                        <th st-sort="_id">ID</th>
+                                                        <th>Name</th>
+                                                        <th>Username</th>
+                                                        <th>Actions</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr ng-if="!displayedUsers || displayedUsers.length <= 0">
+                                                        <td colspan="4">
+                                                            <h4 class="text-center margin-top-30 margin-bottom-30">No Users</h4>
+                                                        </td>
+                                                    </tr>
+                                                    <tr ng-repeat="user in displayedUsers">
+                                                        <td>
+                                                            {{user._id}}
+                                                        </td>
+                                                        <td>{{user.first}} {{user.last}}</td>
+                                                        <td>{{user.username}}</td>
+                                                        <td class="table-action">
+                                                            <input ng-disabled="saveUser" type="checkbox" id="exclude_{{$index}}" ng-model="user.excludeFromCustomerView" ng-change="excludeUserFromCustomerView(user._id, user.excludeFromCustomerView, user)" class="margin-right-5 pull-left" style="margin-top: 2px;">
+                                                            <a ng-click="openEditUserModal(user._id)"><i class="fa fa-pencil"></i></a>
+                                                            <a ng-click="removeUserFromAccount(user._id)" class="delete-row"><i class="fa fa-trash-o"></i></a>
+                                                        </td>
+                                                    </tr>
+                                                    
+                                                    </tbody>
+                                                    <tfoot>
+                                                    <tr>
+                                                        <td class="text-center" st-custom-pagination="" st-displayed-pages="showPages" st-items-by-page="itemPerPage" colspan="8">
+                                                        </td>
+                                                    </tr>
+                                                    <tr style="height:50px;">
+                                                        <td colspan="4">
+                                                            <div class="form-group margin-bottom-0 pull-right">
+                                                                <button type="button" class="btn btn-warning btn-wide btn-scroll btn-scroll-top ti ti-plus" ng-click="openSimpleModal('new-user-modal')">
+                                                                    <span>Add New User</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="form-group margin-bottom-0 margin-right-5 pull-right hidden">
+                                                                <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="openModal('import-contact-modal', 'importContactModalCtrl','md')">
+                                                                    <span>Add Existing User</span>
+                                                                </button>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    </tfoot>
+                                                </table>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="panel-body panel-white space20 ">
