--- a/public/less/ssb-site-builder/ssb-blog-editor.less
+++ b/public/less/ssb-site-builder/ssb-blog-editor.less
@@ -299,7 +299,7 @@ ssb-blog-editor {
                     margin-left: -15px;
                     margin-right: 5px;
                     overflow-y: auto;
-                    width: calc(~"100% - 30px");
+                    width: 300px;
                     height: calc(~"100vh - 140px");
 
                     .ssb-blog-editor-controls-tags{
