--- a/public/less/frontend/components/feature-block-v1.less
+++ b/public/less/frontend/components/feature-block-v1.less
@@ -1,10 +1,9 @@
 /********** Feature Block **********/
-
 .feature-block-v1 {
     position: relative;
     .feature-block-title {
         text-align: center;
-        .fa {
+        .fa:not(.fa-code) {
             text-align: center;
             font-size: 85px;
             background: #4bb0cb;
